--- a/dist-table/.env
+++ b/dist-table/.env
@@ -7,7 +7,7 @@ saveData=./save_data.yaml
 elementsData=../dist-element/save_data.yaml
 
 viewDir=../dist-view
-ddlDir=../dist-db/ddl
+ddlDir=../data/dist
 
 # OPERATION
 mode=production
