--- a/source-table/.env
+++ b/source-table/.env
@@ -7,7 +7,7 @@ saveData=./save_data.yaml
 elementsData=../source-element/save_data.yaml
 
 viewDir=../source-view
-ddlDir=../source-db/ddl
+ddlDir=../data/source
 
 # OPERATION
 mode=production
