--- a/dist-element/.env
+++ b/dist-element/.env
@@ -2,7 +2,7 @@
 saveData=./save_data.yaml
 
 apiElements=../dist/dat
-typesDDL=../dist-db/ddl/01_types.sql
+typesDDL=../data/dist/01_types.sql
 
 viewDir=../dist-view
 
