--- a/source-element/.env
+++ b/source-element/.env
@@ -2,7 +2,7 @@
 saveData=./save_data.yaml
 
 apiElements=../dist/dat
-typesDDL=../source-db/ddl/01_types.sql
+typesDDL=../data/source/01_types.sql
 
 viewDir=../source-view
 
