タイプミス

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ DIST_POSTGRES_USER=postgres
 DIST_POSTGRES_PASSWORD=password
 DIST_POSTGRES_HOST=localhost
 DIST_POSTGRES_PORT=9902
-DIST_POSTGRES_DB=destDB
+DIST_POSTGRES_DB=distDB
 DIST_PGWEB_PORT=9802
