--- a/.env
+++ b/.env
@@ -2,19 +2,10 @@
 POSTGRES_VERSION=16.4
 TIME_ZONE=Asia/Tokyo
 
-# SOURCE_DB
-SOURCE_POSTGRES_USER=postgres
-SOURCE_POSTGRES_PASSWORD=password
-SOURCE_POSTGRES_HOST=localhost
-SOURCE_POSTGRES_PORT=9901
-SOURCE_POSTGRES_DB=sourceDB
-SOURCE_PGWEB_PORT=9801
-
-
-# DIST_DB
-DIST_POSTGRES_USER=postgres
-DIST_POSTGRES_PASSWORD=password
-DIST_POSTGRES_HOST=localhost
-DIST_POSTGRES_PORT=9902
-DIST_POSTGRES_DB=distDB
-DIST_PGWEB_PORT=9802
+# PRODUCT_DB
+PRODUCT_POSTGRES_USER=postgres
+PRODUCT_POSTGRES_PASSWORD=password
+PRODUCT_POSTGRES_HOST=localhost
+PRODUCT_POSTGRES_PORT=6201
+PRODUCT_POSTGRES_DB=productDB
+PRODUCT_PGWEB_PORT=6202
