pgwebの環境変数変更

--- a/compose.yaml
+++ b/compose.yaml
@@ -29,7 +29,7 @@ services:
     environment:
       TZ: ${TIME_ZONE}
       PGTZ: ${TIME_ZONE}
-      DATABASE_URL: postgres://${PRODUCT_POSTGRES_USER}:${PRODUCT_POSTGRES_PASSWORD}@db:5432/${PRODUCT_POSTGRES_DB}?sslmode=disable
+      PGWEB_DATABASE_URL: postgres://${PRODUCT_POSTGRES_USER}:${PRODUCT_POSTGRES_PASSWORD}@db:5432/${PRODUCT_POSTGRES_DB}?sslmode=disable
     restart: always
     depends_on:
       db:
