--- a/element/save_data.yaml
+++ b/element/save_data.yaml
@@ -1,6 +1,6 @@
 data_type: define_elements
 version: 3.0.22
-create_at: 2025-01-19T08:05:19+09:00
+create_at: 2025-01-25T20:48:14+09:00
 elements:
   - name_jp: 受注番号
     name_en: orderNo
@@ -26,7 +26,7 @@ elements:
     name_en: operatorName
     domain: 文字列
     reg_ex: null
-    min_digits: 3
+    min_digits: null
     max_digits: 30
     min_value: null
     max_value: null
@@ -105,7 +105,7 @@ elements:
   - name_jp: 担当者ID
     name_en: operatorId
     domain: NOKEY
-    reg_ex: ^U[0-9]{4}$
+    reg_ex: null
     min_digits: 5
     max_digits: 5
     min_value: null
